@@ -1,3 +1,7 @@
+2001-12-13  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Calib/CGS4.pm (rows): Now returns an array of rows.
+
 2001-12-05  Tim Jenness  <t.jenness@jach.hawaii.edu>
 
 	* Group.pm (subgrp): Try to use a numeric comparison if we have a number.
